<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.studente.myapplication.NewActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/questions"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="94dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.159" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.347" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="156dp"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.348" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="119dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/difficulty"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.552" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner2"
            app:layout_constraintStart_toStartOf="@+id/spinner2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.733" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner3"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/spinner3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.726" />

        <Button
            android:id="@+id/button3"
            android:layout_width="118dp"
            android:layout_height="61dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="140dp"
            android:layout_marginStart="140dp"
            android:text="@string/go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="368dp"
            android:layout_height="59dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
